# NLP-II

./: .gitignore  GPT2_Resolved.ipynb  Generative_Homebrewing_RESOLVED.ipynb  NLP_II_Tema1_Notebook_ESTUDIANTES.ipynb  NLP_II_Tema1_Notebook_SOLUCIONES.ipynb  NMT_Marian_ES_EN_STUDENT.ipynb  QA_Transformers_SOLVED.ipynb  QA_Transformers_STUDENT.ipynb  RAG_basics_and_evaluation.ipynb  README.md  SUMMARY_Extractive_Abstractive_STUDENT.ipynb  XLMR_Paraphrase_SOLVED.ipynb  XLMR_Paraphrase_STUDENT.ipynb  XNLI_BETO_SOLVED.ipynb  pyproject.toml  sample.ipynb
notebooks/advanced/: Knowledge_Distillation_Text_Classification.ipynb  Post_Training_Quantization_and_Benchmarking.ipynb  RAG_production_hybrid.ipynb
notebooks/classification/: BERT_IMDB_SOLVED.ipynb  BERT_IMDB_STUDENT.ipynb
notebooks/generation_dialogue/: DIALOG_Chatbot_SOLVED_EN.ipynb  DIALOG_Chatbot_STUDENT_EN.ipynb  GPT2_Student.ipynb  Generative_Homebrewing_STUDENT.ipynb
notebooks/nli_paraphrase/: XNLI_BETO_STUDENT.ipynb
notebooks/qa_summarization/: SUMMARY_Extractive_Abstractive_SOLVED.ipynb
notebooks/translation/: NMT_Marian_ES_EN_SOLVED.ipynb
