[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-ii"
version = "0.1.0"
description = "Course notebooks for NLP-II (transformers, NMT, summarization, sentiment)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2.0",
  "transformers==4.56.2",
  "datasets==2.19.1",
  "accelerate==1.10.1",
  "evaluate==0.4.1",
  "sentencepiece>=0.1.99",
  "scikit-learn>=1.5.0",
  "numpy==2.0.2",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "huggingface-hub>=0.25.2",
  "kagglehub>=0.2.5",
  "nltk>=3.8.1",
  "fsspec==2024.3.1",
  "pyarrow-hotfix",
  "bitsandbytes>=0.43.0; platform_system != \"Windows\"",
]
